[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/bg/room.png" type="Texture" id=1]
[ext_resource path="res://assets/bg/room-foreground.png" type="Texture" id=2]
[ext_resource path="res://scripts/Map/RoomView.gd" type="Script" id=3]
[ext_resource path="res://assets/bg/room-mask.png" type="Texture" id=4]
[ext_resource path="res://scripts/MapObjects/PlayerDetectorArea.gd" type="Script" id=5]
[ext_resource path="res://assets/tiles/room_tiles.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 327.304, 181.906 )

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 106, 18 )

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 234, 18 )

[sub_resource type="RectangleShape2D" id=4]

extents = Vector2( 110, 16 )

[sub_resource type="RectangleShape2D" id=5]

extents = Vector2( 230.532, 15 )

[node name="PlayerRoom" type="Node2D"]

[node name="bg" type="Sprite" parent="."]
position = Vector2( 475, 266 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
z_as_relative = false
texture = ExtResource( 1 )

[node name="bed" type="Sprite" parent="bg"]
position = Vector2( -392, 238 )
scale = Vector2( 0.9, 0.7 )
z_index = 1
z_as_relative = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 304, 646, 323, 190 )

[node name="table" type="Sprite" parent="bg"]
position = Vector2( 462, 166 )
scale = Vector2( 0.8, 0.8 )
z_index = 1
z_as_relative = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1216, 570, 266, 190 )

[node name="RoomView" type="Camera2D" parent="."]
position = Vector2( 480, 270 )
z_as_relative = false
current = true
script = ExtResource( 3 )

[node name="Mask" type="Sprite" parent="RoomView"]
visible = false
z_index = 1
z_as_relative = false
texture = ExtResource( 4 )

[node name="PlayerDetectorArea" type="Area2D" parent="RoomView"]
editor/display_folded = true
visible = false
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomView/PlayerDetectorArea"]
shape = SubResource( 1 )

[node name="static-tiles" type="Node2D" parent="."]
editor/display_folded = true

[node name="janela" type="StaticBody2D" parent="static-tiles"]
editor/display_folded = true
position = Vector2( 472, 271 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="static-tiles/janela"]
position = Vector2( 4, -4 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="static-tiles/janela"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 247, 57 )

[node name="chão" type="StaticBody2D" parent="static-tiles"]
editor/display_folded = true
position = Vector2( 701, 402 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="static-tiles/chão"]
position = Vector2( 4, -4 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="static-tiles/chão"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 247, 57 )

[node name="chão2" type="StaticBody2D" parent="static-tiles"]
editor/display_folded = true
position = Vector2( 375, 425 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="static-tiles/chão2"]
position = Vector2( 1, 1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="static-tiles/chão2"]
position = Vector2( 0, 5 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 57, 494, 57 )

[node name="wall" type="StaticBody2D" parent="static-tiles"]
editor/display_folded = true
position = Vector2( 171, 247 )
rotation = -1.57079
scale = Vector2( 0.611629, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="static-tiles/wall"]
position = Vector2( -4, -1 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="static-tiles/wall"]
position = Vector2( 0, -1 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 114, 247, 38 )

[node name="wall2" type="StaticBody2D" parent="static-tiles"]
editor/display_folded = true
position = Vector2( 798, 247 )
rotation = 1.5708
scale = Vector2( 0.611629, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="static-tiles/wall2"]
position = Vector2( -4, -1 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="static-tiles/wall2"]
position = Vector2( 0, -1 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 114, 247, 38 )

[node name="ceiling" type="StaticBody2D" parent="static-tiles"]
editor/display_folded = true
position = Vector2( 646, 152 )
rotation = 0.261799
scale = Vector2( 0.727542, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="static-tiles/ceiling"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="static-tiles/ceiling"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 152, 494, 38 )

[node name="ceiling2" type="StaticBody2D" parent="static-tiles"]
editor/display_folded = true
position = Vector2( 323, 152 )
rotation = -0.261799
scale = Vector2( 0.727542, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="static-tiles/ceiling2"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="static-tiles/ceiling2"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 152, 494, 38 )

[connection signal="body_exited" from="RoomView/PlayerDetectorArea" to="RoomView/PlayerDetectorArea" method="is_player_exit"]
[connection signal="player_exited" from="RoomView/PlayerDetectorArea" to="RoomView" method="_on_player_exited"]
